--- a/index.html
+++ b/index.html
@@ -12,30 +12,31 @@
         <div class="topside calculator-box__topside">
             <div class="topside__ouput-screen"></div>
             <div class="topside__buttons">
-                <button class="topside__delete-button"></button>
-                <button class="topside__operator-btn" id="divide"></button>
+                <button class="topside__off-btn">OFF</button>
+                <button class="topside__on-btn">ON</button>
+                <button class="topside__delete-btn" id="divide">C</button>
             </div>
         </div>
         <div class="bottomside  calculator-box__bottomside">
             <div class="bottomside__number-btns">
-                <button class="bottomside__number-btn" id="7"></button>
-                <button class="bottomside__number-btn" id="8"></button>
-                <button class="bottomside__number-btn" id="9"></button>
-                <button class="bottomside__number-btn" id="4"></button>
-                <button class="bottomside__number-btn" id="5"></button>
-                <button class="bottomside__number-btn" id="6"></button>
-                <button class="bottomside__number-btn" id="1"></button>
-                <button class="bottomside__number-btn" id="2"></button>
-                <button class="bottomside__number-btn" id="3"></button>
-                <button class="bottomside__number-btn" id="0"></button>
-                <button class="bottomside__number-btn" id="point"></button>
+                <button class="bottomside__number-btn" id="7">7</button>
+                <button class="bottomside__number-btn" id="8">8</button>
+                <button class="bottomside__number-btn" id="9">9</button>
+                <button class="bottomside__number-btn" id="4">4</button>
+                <button class="bottomside__number-btn" id="5">5</button>
+                <button class="bottomside__number-btn" id="6">6</button>
+                <button class="bottomside__number-btn" id="1">1</button>
+                <button class="bottomside__number-btn" id="2">2</button>
+                <button class="bottomside__number-btn" id="3">3</button>
+                <button class="bottomside__number-btn" id="0">0</button>
+                <button class="bottomside__number-btn" id="point">.</button>
+                <button class="bottomside__number-btn" id="equals">=</button>
             </div>
             <div class="bottomside__operator-btns">
-                <button class="bottomside__operator-btn" id="divide"></button>
-                <button class="bottomside__operator-btn" id="times"></button>
-                <button class="bottomside__operator-btn" id="minus"></button>
-                <button class="bottomside__operator-btn" id="plus"></button>
-                <button class="bottomside__operator-btn" id="equals"></button>
+                <button class="bottomside__operator-btn" id="divide">/</button>
+                <button class="bottomside__operator-btn" id="times">*</button>
+                <button class="bottomside__operator-btn" id="minus">-</button>
+                <button class="bottomside__operator-btn" id="plus">+</button>
             </div>
 
 
