Write output of numbers on the screen

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <div class="bottomside  calculator-box__bottomside">
             <div class="bottomside__number-btns">
                 <button class="bottomside__number-btn" id="7">7</button>
-                <button class="bottomside__number-btn" id="8">8</button>
-                <button class="bottomside__number-btn" id="9">9</button>
-                <button class="bottomside__number-btn" id="4">4</button>
-                <button class="bottomside__number-btn" id="5">5</button>
-                <button class="bottomside__number-btn" id="6">6</button>
-                <button class="bottomside__number-btn" id="1">1</button>
-                <button class="bottomside__number-btn" id="2">2</button>
-                <button class="bottomside__number-btn" id="3">3</button>
-                <button class="bottomside__number-btn" id="0">0</button>
+                <button class="bottomside__number-btn" data-cell-index="8">8</button>
+                <button class="bottomside__number-btn" data-cell-index="9">9</button>
+                <button class="bottomside__number-btn" data-cell-index="4">4</button>
+                <button class="bottomside__number-btn" data-cell-index="5">5</button>
+                <button class="bottomside__number-btn" data-cell-index="6">6</button>
+                <button class="bottomside__number-btn" data-cell-index="1">1</button>
+                <button class="bottomside__number-btn" data-cell-index="2">2</button>
+                <button class="bottomside__number-btn" data-cell-index="3">3</button>
+                <button class="bottomside__number-btn" data-cell-index="0">0</button>
                 <button class="bottomside__number-btn" id="point">.</button>
-                <button class="bottomside__number-btn" id="equals">=</button>
+                <button class="bottomside__numbe-btn" id="equals">=</button>
             </div>
             <div class="bottomside__operator-btns">
                 <button class="bottomside__operator-btn" id="divide">/</button>
@@ -41,6 +41,7 @@
 
 
         </div>
+        <script src="script.js"></script>
     </article>
 </body>
 </html>
