Write math calculations and logic

--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
                 <button class="bottomside__numbe-btn" id="equals">=</button>
             </div>
             <div class="bottomside__operator-btns">
-                <button class="bottomside__operator-btn" id="divide">/</button>
-                <button class="bottomside__operator-btn" id="times">*</button>
-                <button class="bottomside__operator-btn" id="minus">-</button>
-                <button class="bottomside__operator-btn" id="plus">+</button>
+                <button class="bottomside__operator-btn" id="divide" value="/">/</button>
+                <button class="bottomside__operator-btn" id="times" value="*">*</button>
+                <button class="bottomside__operator-btn" id="minus" value="-">-</button>
+                <button class="bottomside__operator-btn" id="plus" value="+">+</button>
             </div>
-
-
         </div>
         <script src="script.js"></script>
+        <script src="math.js"></script>
+        <script src="calculator.js"></script>
+
     </article>
 </body>
 </html>
